Update library path search

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,6 +96,8 @@ endif ()
 set(QT5_PACKAGES_OPTIONAL TextToSpeech)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+link_directories("${CMAKE_INSTALL_PATH}/lib64")
+link_directories("${CMAKE_INSTALL_PATH}/lib")
 
 find_package(LinphoneCxx CONFIG REQUIRED)
 find_package(Linphone CONFIG REQUIRED)
@@ -103,7 +105,6 @@ find_package(bctoolbox CONFIG REQUIRED)
 find_package(belcard CONFIG REQUIRED)
 find_package(Mediastreamer2 CONFIG REQUIRED)
 find_package(ortp CONFIG REQUIRED)
-find_package(opus CONFIG)
 
 find_package(Minizip REQUIRED)
 
