--- a/.gitlab-ci-files/job-windows-desktop.yml
+++ b/.gitlab-ci-files/job-windows-desktop.yml
@@ -63,19 +63,17 @@
     - cmake .. -G "Visual Studio 15 2017" -DLINPHONESDK_PLATFORM=Desktop -DENABLE_CSHARP_WRAPPER=YES -DCMAKE_BUILD_TYPE=Release %DEFAULT_CMAKE_OPTIONS% %CMAKE_OPTIONS%
     - cmake --build . --target sdk --config Release -- /maxcpucount /nodeReuse:true /p:TrackFileAccess=false
     - C:\PROGRA~1\Python37\Scripts\cl -s
-    - ROBOCOPY linphone-sdk/desktop  ../../build-desktop/OUTPUT /MIR
-    - cd ../../submodules/externals/minizip    
+    - ROBOCOPY linphone-sdk/desktop  ../../build-desktop/OUTPUT /MIR > NUL
+    - cd ../../submodules/externals/minizip
 # Minizip submodule Building
     - IF EXIST build-minizipdesktop RMDIR /S /Q build-minizipdesktop
     - mkdir build-minizipdesktop
     - cd build-minizipdesktop
-
     - C:\PROGRA~1\Python37\Scripts\cl -s    
     - cmake .. -G "Visual Studio 15 2017" -DENABLE_CSHARP_WRAPPER=YES -DCMAKE_BUILD_TYPE=Release %DEFAULT_CMAKE_OPTIONS% %CMAKE_OPTIONS% -DCMAKE_INSTALL_PREFIX=../../../../build-desktop/OUTPUT
     - cmake --build . --target all --config Release -- /maxcpucount /nodeReuse:true /p:TrackFileAccess=false
     - cmake --build . --target install --config Release -- /maxcpucount /nodeReuse:true /p:TrackFileAccess=false
     - C:\PROGRA~1\Python37\Scripts\cl -s
-
 # Desktop Building
     - cd ../../../../build-desktop
     - C:\PROGRA~1\Python37\Scripts\cl -s    
