--- a/.gitlab-ci-files/job-macosx-desktop.yml
+++ b/.gitlab-ci-files/job-macosx-desktop.yml
@@ -20,7 +20,7 @@
     - echo $DEFAULT_CMAKE_OPTIONS
     - echo $CMAKE_OPTIONS
     - echo $ADDITIONAL_BUILD_OPTIONS
-    - cmake .. -G "$CMAKE_GENERATOR" -DLINPHONESDK_PLATFORM=Desktop -DCMAKE_OSX_DEPLOYMENT_TARGET=10.9 $DEFAULT_CMAKE_OPTIONS $XCODE_OPTIONS $CMAKE_OPTIONS -DCMAKE_INSTALL_PREFIX=../../build-desktop/OUTPUT
+    - cmake .. -G "$CMAKE_GENERATOR" -DLINPHONESDK_PLATFORM=Desktop -DCMAKE_OSX_DEPLOYMENT_TARGET=10.9 $DEFAULT_CMAKE_OPTIONS $XCODE_OPTIONS $CMAKE_OPTIONS -DCMAKE_INSTALL_PREFIX=../../build-desktop/OUTPUT -DCMAKE_PREFIX_PATH=../../build-desktop/OUTPUT
     - cmake --build . --target sdk -- $ADDITIONAL_BUILD_OPTIONS
     - git describe > gitdescribe.txt
 #    - mv -f linphone-sdk/desktop/* ../../build-desktop/OUTPUT
