--- a/.gitlab-ci-files/job-macosx-desktop.yml
+++ b/.gitlab-ci-files/job-macosx-desktop.yml
@@ -22,7 +22,7 @@
     - echo $ADDITIONAL_BUILD_OPTIONS
     - cmake .. -G "$CMAKE_GENERATOR" -DLINPHONESDK_PLATFORM=Desktop -DCMAKE_OSX_DEPLOYMENT_TARGET=10.9 $DEFAULT_CMAKE_OPTIONS $XCODE_OPTIONS $CMAKE_OPTIONS
     - cmake --build . --target sdk -- $ADDITIONAL_BUILD_OPTIONS
-    - git describe > gitdescribe.txt
+    - git describe > ../build-desktop/sdk_gitdescribe.txt
 #    - mv -f linphone-sdk/desktop/* ../../build-desktop/OUTPUT
     - rsync -a linphone-sdk/desktop/* ../../build-desktop/OUTPUT
     - cd ../../submodules/externals/minizip    
@@ -35,20 +35,11 @@
     - cmake --build . --target install -- $ADDITIONAL_BUILD_OPTIONS
 # Desktop Building
     - cd ../../../../build-desktop
-    - ls
-    - cd OUTPUT
-    - ls
-    - cd include
-    - ls
-    - cd ../..
     - cmake .. -G "$CMAKE_GENERATOR" -DCMAKE_OSX_DEPLOYMENT_TARGET=10.9 $DEFAULT_CMAKE_OPTIONS $XCODE_OPTIONS $CMAKE_OPTIONS -DCMAKE_INSTALL_PREFIX=OUTPUT -DCMAKE_PREFIX_PATH=OUTPUT
     - cmake --build . --target all -- $ADDITIONAL_BUILD_OPTIONS
     - codesign --verbose -s "$MACOS_SIGNING_IDENTITY" WORK/desktop/Build/linphone_package/Linphone-*.dmg
     - cmake --build . --target install -- $ADDITIONAL_BUILD_OPTIONS
     - ccache -s
-    - ls
-    - cd OUTPUT
-    - ls
 
 
 #    - python prepare.py -G "$CMAKE_GENERATOR" -cc --package -DLINPHONE_BUILDER_SIGNING_IDENTITY="$MACOS_SIGNING_IDENTITY" $DEFAULT_MACOS_CMAKE_OPTIONS $CMAKE_OPTIONS
@@ -58,14 +49,10 @@
 
   artifacts:
     paths:
-      - build-desktop/gitdescribe.txt
-      - build-desktop/linphone-sdk-*.zip      
-      - build-desktop/linphone-sdk.podspec
+      - build-desktop/
       - build-desktop/OUTPUT
-      - WORK/desktop/Build/linphone_package/Linphone-*.dmg
-      - WORK/desktop/Build/linphone_package/linphone-sdk-*-mac.zip
     when: always
-    expire_in: 1 week
+    expire_in: 1 day
 
 
 
