Undo gitdescribe and dirty testing for windows

--- a/.gitlab-ci-files/job-windows-desktop.yml
+++ b/.gitlab-ci-files/job-windows-desktop.yml
@@ -62,7 +62,7 @@
     - C:\PROGRA~1\Python37\Scripts\cl -s    
     - cmake .. -G "Visual Studio 15 2017" -DLINPHONESDK_PLATFORM=Desktop -DENABLE_CSHARP_WRAPPER=YES -DCMAKE_BUILD_TYPE=Release %DEFAULT_CMAKE_OPTIONS% %CMAKE_OPTIONS%
     - cmake --build . --target sdk --config Release -- /maxcpucount /nodeReuse:true /p:TrackFileAccess=false
-    - (ROBOCOPY linphone-sdk/desktop  ../../build-desktop/OUTPUT /MIR > NUL) ^& IF %ERRORLEVEL% exit /B 0
+    - (ROBOCOPY linphone-sdk/desktop  ../../build-desktop/OUTPUT /MIR > NUL) ^& (DIR > NUL)
     - cd ../../submodules/externals/minizip
 # Minizip submodule Building
     - IF EXIST build-minizipdesktop RMDIR /S /Q build-minizipdesktop
