--- a/.gitlab-ci-files/job-macosx-desktop.yml
+++ b/.gitlab-ci-files/job-macosx-desktop.yml
@@ -22,7 +22,7 @@
     - echo $ADDITIONAL_BUILD_OPTIONS
     - cmake .. -G "$CMAKE_GENERATOR" -DLINPHONESDK_PLATFORM=Desktop -DCMAKE_OSX_DEPLOYMENT_TARGET=10.9 $DEFAULT_CMAKE_OPTIONS $XCODE_OPTIONS $CMAKE_OPTIONS
     - cmake --build . --target sdk -- $ADDITIONAL_BUILD_OPTIONS
-    - git describe > ../build-desktop/sdk_gitdescribe.txt
+    - git describe > gitdescribe.txt
 #    - mv -f linphone-sdk/desktop/* ../../build-desktop/OUTPUT
     - rsync -a linphone-sdk/desktop/* ../../build-desktop/OUTPUT
     - cd ../../submodules/externals/minizip    
