More debug folders for mac and windows

--- a/.gitlab-ci-files/job-macosx-desktop.yml
+++ b/.gitlab-ci-files/job-macosx-desktop.yml
@@ -50,7 +50,7 @@
   artifacts:
     paths:
       - build-desktop/
-      - build-desktop/OUTPUT
+      - linphone-sdk/build-sdkdesktop
     when: always
     expire_in: 1 day
 
