--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -402,8 +402,8 @@ foreach (package ${QT5_PACKAGES_OPTIONAL})
 endforeach ()
 
 if (APPLE)
-  list(APPEND INCLUDED_DIRECTORIES "${CMAKE_INSTALL_PREFIX}/Linphone.framework/Headers")
-  list(APPEND LIBRARIES "-framework Cocoa -framework IOKit -framework Linphone")
+  list(APPEND INCLUDED_DIRECTORIES "${CMAKE_INSTALL_PREFIX}/Frameworks/linphone.framework/Headers")
+  list(APPEND LIBRARIES "-framework Cocoa -framework IOKit -framework linphone")
 endif ()
 
 target_include_directories(${APP_LIBRARY} SYSTEM PRIVATE ${INCLUDED_DIRECTORIES})
