--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,12 +100,12 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 link_directories("${CMAKE_INSTALL_PREFIX}/lib64")
 link_directories("${CMAKE_INSTALL_PREFIX}/lib")
 
-find_package(LinphoneCxx CONFIG REQUIRED)
-find_package(Linphone CONFIG REQUIRED)
-find_package(bctoolbox CONFIG REQUIRED)
-find_package(belcard CONFIG REQUIRED)
-find_package(Mediastreamer2 CONFIG REQUIRED)
-find_package(ortp CONFIG REQUIRED)
+find_package(LinphoneCxx CONFIG REQUIRED PATHS ${CMAKE_INSTALL_PREFIX})
+find_package(Linphone CONFIG REQUIRED PATHS ${CMAKE_INSTALL_PREFIX})
+find_package(bctoolbox CONFIG REQUIRED PATHS ${CMAKE_INSTALL_PREFIX})
+find_package(belcard CONFIG REQUIRED PATHS ${CMAKE_INSTALL_PREFIX})
+find_package(Mediastreamer2 CONFIG REQUIRED PATHS ${CMAKE_INSTALL_PREFIX})
+find_package(ortp CONFIG REQUIRED PATHS ${CMAKE_INSTALL_PREFIX})
 
 find_package(Minizip REQUIRED)
 
