--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,6 +105,9 @@ if(APPLE)
     find_package(belcard CONFIG REQUIRED PATHS ${CMAKE_INSTALL_PREFIX} PATH_SUFFIXES "Frameworks")
     find_package(Mediastreamer2 CONFIG REQUIRED PATHS ${CMAKE_INSTALL_PREFIX} PATH_SUFFIXES "Frameworks")
     find_package(ortp CONFIG REQUIRED PATHS ${CMAKE_INSTALL_PREFIX} PATH_SUFFIXES "Frameworks")
+    message("LINPHONE : ${LINPHONE_INCLUDE_DIRS} => ${LINPHONE_LIBRARIES}")
+    message("LINPHONECXX : ${LINPHONECXX_INCLUDE_DIRS} => ${LINPHONECXX_LIBRARIES}")
+
 else()
     find_package(LinphoneCxx CONFIG REQUIRED)
     find_package(Linphone CONFIG REQUIRED)
