--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,6 +105,7 @@ if(APPLE)
     find_package(belcard CONFIG REQUIRED PATHS ${CMAKE_INSTALL_PREFIX} PATH_SUFFIXES "Frameworks")
     find_package(Mediastreamer2 CONFIG REQUIRED PATHS ${CMAKE_INSTALL_PREFIX} PATH_SUFFIXES "Frameworks")
     find_package(ortp CONFIG REQUIRED PATHS ${CMAKE_INSTALL_PREFIX} PATH_SUFFIXES "Frameworks")
+    message("INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}")
     message("LINPHONE : ${LINPHONE_INCLUDE_DIRS} => ${LINPHONE_LIBRARIES}")
     message("LINPHONECXX : ${LINPHONECXX_INCLUDE_DIRS} => ${LINPHONECXX_LIBRARIES}")
 
