--- a/.gitlab-ci-files/job-windows-desktop.yml
+++ b/.gitlab-ci-files/job-windows-desktop.yml
@@ -55,26 +55,25 @@
     - cd ../linphone-sdk
     #handling the case of previous job cancellation
     - IF EXIST build-sdkdesktop RMDIR /S /Q build-sdkdesktop
-    - mkdir build-sdkdesktop
-    - cd build-sdkdesktop    
+    - mkdir build-sdk
+    - cd build-sdk    
     #we launch the msvc-cl wrapper located in python scripts folder
     #this wrapper relays only needed calls to the real compiler    
     #cache stats display
     - C:\PROGRA~1\Python37\Scripts\cl -s    
     - cmake .. -G "Visual Studio 15 2017" -DLINPHONESDK_PLATFORM=Desktop -DENABLE_CSHARP_WRAPPER=YES -DCMAKE_BUILD_TYPE=Release %DEFAULT_CMAKE_OPTIONS% %CMAKE_OPTIONS%
     - cmake --build . --target sdk --config Release -- /maxcpucount /nodeReuse:true /p:TrackFileAccess=false
-    - (ROBOCOPY linphone-sdk/desktop  ../../build-desktop/OUTPUT /MIR > NUL) ^& (DIR > NUL)
     - cd ../../submodules/externals/minizip
 # Minizip submodule Building
-    - IF EXIST build-minizipdesktop RMDIR /S /Q build-minizipdesktop
-    - mkdir build-minizipdesktop
-    - cd build-minizipdesktop
-    - cmake .. -G "Visual Studio 15 2017" -DCMAKE_BUILD_TYPE=Release %DEFAULT_CMAKE_OPTIONS% %CMAKE_OPTIONS% -DCMAKE_INSTALL_PREFIX=../../../../build-desktop/OUTPUT
+    - IF EXIST build-minizip RMDIR /S /Q build-minizip
+    - mkdir build-minizip
+    - cd build-minizip
+    - cmake .. -G "Visual Studio 15 2017" -DCMAKE_BUILD_TYPE=Release %DEFAULT_CMAKE_OPTIONS% %CMAKE_OPTIONS% -DCMAKE_INSTALL_PREFIX=OUTPUT
     - cmake --build . --target all_build --config Release -- /maxcpucount /nodeReuse:true /p:TrackFileAccess=false
     - cmake --build . --target install --config Release -- /maxcpucount /nodeReuse:true /p:TrackFileAccess=false
 # Desktop Building
     - cd ../../../../build-desktop
-    - cmake .. -G "Visual Studio 15 2017" -DENABLE_CSHARP_WRAPPER=YES -DCMAKE_BUILD_TYPE=Release %DEFAULT_CMAKE_OPTIONS% %CMAKE_OPTIONS% -DCMAKE_INSTALL_PREFIX=OUTPUT -DCMAKE_PREFIX_PATH=OUTPUT
+    - cmake .. -G "Visual Studio 15 2017" -DENABLE_CSHARP_WRAPPER=YES -DCMAKE_BUILD_TYPE=Release %DEFAULT_CMAKE_OPTIONS% %CMAKE_OPTIONS% -DCMAKE_INSTALL_PREFIX=OUTPUT -DCMAKE_PREFIX_PATH="linphone-sdk/build-sdk/linphone-sdk/desktop;submodules/externals/minizip/build-minizip/OUTPUT"
     - cmake --build . --target all_build --config Release -- /maxcpucount /nodeReuse:true /p:TrackFileAccess=false
     - cmake --build . --target install --config Release -- /maxcpucount /nodeReuse:true /p:TrackFileAccess=false
     - C:\PROGRA~1\Python37\Scripts\cl -s
@@ -82,9 +81,9 @@
   artifacts:
     paths:
       - build-desktop\OUTPUT
-      - submodules/externals/minizip/build-minizipdesktop
-    when: always
-    expire_in: 1 day
+      - linphone-sdk\build-sdk\linphone-sdk\desktop
+      - submodules\externals\minizip\build-minizip\OUTPUT
+    expire_in: 1 week
             
 .job-windows-vs2017-scheduled:
   extends: .job-windows-vs2017
