--- a/.gitlab-ci-files/job-macosx-desktop.yml
+++ b/.gitlab-ci-files/job-macosx-desktop.yml
@@ -21,15 +21,15 @@
     - echo $CMAKE_OPTIONS
     - echo $ADDITIONAL_BUILD_OPTIONS
     - cmake .. -G "$CMAKE_GENERATOR" -DLINPHONESDK_PLATFORM=Desktop $DEFAULT_CMAKE_OPTIONS $XCODE_OPTIONS $CMAKE_OPTIONS
-    - cmake --build . -- $ADDITIONAL_BUILD_OPTIONS
+    - cmake --build . $LBC_NODEBUG_OPTIONS
     - cd ../../submodules/externals/minizip    
 # Minizip submodule Building
     - if [ -d "build-minizip" ]; then rm -rf build-minizip; fi;
     - mkdir -p build-minizip
     - cd build-minizip
     - cmake .. -G "$CMAKE_GENERATOR" $DEFAULT_CMAKE_OPTIONS $XCODE_OPTIONS $CMAKE_OPTIONS -DCMAKE_INSTALL_PREFIX=OUTPUT -DCMAKE_PREFIX_PATH="../../../linphone-sdk/build-sdk/linphone-sdk/desktop"
-    - cmake --build . --target all -- $ADDITIONAL_BUILD_OPTIONS
-    - cmake --build . --target install -- $ADDITIONAL_BUILD_OPTIONS
+    - cmake --build . --target all $LBC_NODEBUG_OPTIONS
+    - cmake --build . --target install
 # Desktop Building
     - cd ../../../../build-desktop
     - cmake .. -G "$CMAKE_GENERATOR" -DCMAKE_OSX_DEPLOYMENT_TARGET=10.9 $DEFAULT_CMAKE_OPTIONS $XCODE_OPTIONS $CMAKE_OPTIONS -DCMAKE_INSTALL_PREFIX=OUTPUT -DCMAKE_PREFIX_PATH="linphone-sdk/build-sdk/linphone-sdk/desktop;submodules/externals/minizip/build-minizip/OUTPUT"
