Change debian8 CI on cmake parameters : old version of cmake

--- a/.gitlab-ci-files/job-linux-desktop-debian8.yml
+++ b/.gitlab-ci-files/job-linux-desktop-debian8.yml
@@ -12,6 +12,7 @@ job-debian8-makefile-gcc:
     CC: gcc
     CXX: g++
     ADDITIONAL_BUILD_OPTIONS: -j$MAKEFILE_JOBS
+    LBC_NODEBUG_OPTIONS: -- -j$MAKEFILE_JOBS
   extends: .job-linux-desktop
 
 
@@ -27,6 +28,7 @@ job-debian8-makefile-clang:
     CC: clang
     CXX: clang++
     ADDITIONAL_BUILD_OPTIONS: -j$MAKEFILE_JOBS
+    LBC_NODEBUG_OPTIONS: -- -j$MAKEFILE_JOBS
   extends: .job-linux-desktop
 
 #################################################
