MacOs : Update Script for first automatic building and fix libraries references

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -481,3 +481,11 @@ source_group(
 source_group(
   "Svg" REGULAR_EXPRESSION ".+\.svg$"
 )
+
+# ------------------------------
+# Installation
+# ------------------------------
+install(SCRIPT "${CMAKE_CURRENT_SOURCE_DIR}/cmake_builder/install.cmake")
+#endif ()
+
+
